welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:40: error: not found: value newline
  newline()
  ^